--- a/style.css
+++ b/style.css
@@ -6,36 +6,165 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: #ffffff;
+}
+
+a {
+    text-decoration: none;
+    color: #020202;
+}
+
+li {
+    list-style: none;
+}
+
+/* ヘッダー */
 header {
-    background-color: bisque;
+    background-color: #f5e9da;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 5%;
 }
 
-/* トップイメージ */
-.top-hero {
-    position: relative;
-    width: 100%;
+.menu {
+    margin-left: auto;
 }
 
-.main-image {
-    width: 100%;
-    height: 50vh;
-    object-fit: cover;
+#open {
+    font-size: 30px;
+    font-weight: lighter;
+    line-height: 53px;
+    cursor: pointer;
+    color: #020202;
+}
+
+.hide {
+    display: none;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 25%;
+    height: 100%;
+    background-color: #f5e9da;
+    z-index: 10;
+    padding: 2%;
+    /* マウスに反応しない透明な壁 */
+    pointer-events: none;
+    opacity: 0;
+    transition: opacity 0.6s;
+}
+
+#close {
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    font-size: 30px;
+    cursor: pointer;
+    color: #020202;
+}
+
+.overlay li {
+    margin: 20px 0;
+    font-size: 16px;
+    text-align: center;
+}
+
+.overlay.show {
+    opacity: 1;
+    pointer-events: auto;
     display: block;
 }
 
-body {
-    background-color: oldlace;
+.overlay.show li {
+    opacity: 1;
+    transform: none;
+}
+
+li:nth-child(1) {
+    transition-delay: 0.1s;
+}
+
+li:nth-child(2) {
+    transition-delay: 0.2s;
+}
+
+li:nth-child(3) {
+    transition-delay: 0.3s;
+}
+
+/* トップイメージ */
+.wave-section {
+    position: relative;
+    width: 100%;
+    height: 70vh;
+    overflow: hidden;
+}
+
+.bg-img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+
+.wave {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 120px;
+}
+
+.wave.front {
+    z-index: 2;
 }
 
 /* 私について */
-.about {
+#about {
+    position: relative;
+    background-color: oldlace;
+    width: 100%;
+    height: 300px;
+}
+
+#about h2 {
+    text-align: center;
+    padding-top: 50px;
+    font-size: 30px;
+}
+
+#about p {
+    width: 80%;
+    padding-top: 20px;
+    margin: 0 auto;
+    font-size: 16px;
+    text-align: center;
+}
+
+#about a {
+    display: block;
+    position: absolute;
+    bottom: 20px;
+    right: 10%;
+    font-size: 16px;
+}
+
+.wave-section-back {
     position: relative;
     width: 100%;
-    height: 500px;
-    background-color: papayawhip;
-    clip-path: ellipse(75% 50% at 50% 50%);
-    margin-top: -65px;
-    text-align: center;  
+    height: 120px;
+    overflow: hidden;
+}
+
+.wave.back {
+    z-index: 2;
 }
 
 /* 名前 */
@@ -96,8 +225,10 @@ footer {
     background-color: papayawhip;
     clip-path: ellipse(75% 50% at 50% 50%);
     margin-top: -65px;
-    text-align: center;  
+    text-align: center;
 }
+
+
 
 /* スマホサイズ440px以下の時のレイアウト調整 */
 @media (max-width:440px) {
